# yuxi-rag-mini

./: README.md
yuxi-rag-mini/: .env.example  README.md  docker-compose.yml  pyproject.toml
yuxi-rag-mini/backend/app/: main.py
yuxi-rag-mini/backend/app/api/: chat_routes.py  file_routes.py  health_routes.py  kb_routes.py  query_routes.py
yuxi-rag-mini/backend/app/core/: config.py  errors.py  logging.py
yuxi-rag-mini/backend/app/rag/: base.py  factory.py  manager.py  qa_service.py  schemas.py
yuxi-rag-mini/backend/app/rag/backends/: milvus_kb.py
yuxi-rag-mini/backend/app/rag/chunking/: markdown_chunker.py  text_chunker.py
yuxi-rag-mini/backend/app/rag/graphrag/: README.md  interfaces.py
yuxi-rag-mini/backend/app/rag/parser/: adapter.py  base.py  docx_parser.py  factory.py  markdown_parser.py  pdf_parser.py  text_parser.py  unified.py
yuxi-rag-mini/backend/app/rag/providers/: llm.py
yuxi-rag-mini/backend/data/: yuxi_rag.db
yuxi-rag-mini/frontend/: index.html  package-lock.json  package.json  tsconfig.json
yuxi-rag-mini/frontend/src/: App.vue
yuxi-rag-mini/frontend/src/api/: kb.ts
yuxi-rag-mini/frontend/src/components/: ChunkResultList.vue  FileUploader.vue  SearchBox.vue
yuxi-rag-mini/frontend/src/views/: ChatView.vue  KnowledgeBaseView.vue  QueryView.vue  UploadView.vue
yuxi-rag-mini/tests/: conftest.py  test_chunk_model.py  test_chunker.py  test_file_status.py  test_hybrid_search.py  test_import_check.py  test_milvus_schema.py  test_parser.py  test_pipeline.py  test_ragflow_chunking.py  test_retrieval_config.py  test_unified_parser.py
(+48 files in other folders)
