[project]
name = "yuxi-rag-mini"
version = "0.1.0"
description = "Lightweight RAG knowledge base system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "pymilvus>=2.5.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "minio>=7.2.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]
